# Digital-Kiosk

./: .gitignore  CHANGELOG.md  README.md  TASKS.md  UPDATES.md  electron-builder.admin.json  electron-builder.player.json  index.html  install.sh  package-lock.json  package.json  postcss.config.mjs  server.cjs  tsconfig.json  typedoc.json  vite-env.d.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
Digital Kiosk Manager/: README.md  flutter_launcher_icons.yaml  pubspec.yaml  run-windows-workaround.cmd
Digital Kiosk Manager/lib/: main.dart
Digital Kiosk Manager/linux/: CMakeLists.txt
Digital Kiosk Manager/test/: app_test.dart  (+1 more)
database/: SCHEMA.md  system-db.backup.json  system.db  system.db-shm
docs/: index.md
docs-api/: hierarchy.html  index.html
electron/: index.html  main.cjs  package.json  player-main.cjs  preload-player.cjs  preload.cjs  vite.config.ts
kiosk-agent-cpp/: CMakeLists.txt  README.md
kiosk-agent-cpp/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  kiosk-agent
kiosk-agent-cpp/config/: agent-config.example.json
kiosk-agent-cpp/include/agent/: AgentApp.hpp
kiosk-agent-cpp/scripts/: kiosk-agent.service
kiosk-agent-cpp/src/: AgentApp.cpp  main.cpp
kiosk-agent-cpp/src/platform/linux/: LinuxServiceStub.cpp
kiosk-agent-cpp/src/platform/windows/: WindowsServiceStub.cpp
prisma/: schema.prisma
scripts/: extract-release-notes.cjs  flutter-manager.cjs  flutter-windows-workaround.ps1  generate-changelog.cjs  prepare-electron-bundle.cjs  update-service.cjs
src-vite/: main.tsx  vite.config.ts
(+382 files in other folders)
